--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
 
@@ -8,12 +9,156 @@
 
   <link rel="stylesheet" href="css/index.css">
 
+  <script src="https://kit.fontawesome.com/278e119c51.js" crossorigin="anonymous"></script>
+
   <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
   <![endif]-->
 </head>
 
 <body>
-  <h1>My Resume</h1>
+  <header>
+
+    <div class='name'>
+      <h1>EMILY BRUNER</h1>
+      <h3>WEB DEVELOPER</h3>
+    </div>
+
+    <div class="navigation">
+      <nav>
+        <a href='#'>Home</a>
+        <a href='#'>About</a>
+        <a href='#'>Portfolio</a>
+        <a href='#'>Contact</a>
+      </nav>
+    </div>
+
+  </header>
+
+  <!-- Work Experience Section -->
+
+  <section class='experience'>
+    <h2>EXPERIENCE</h2>
+
+    <div class='healthscripts'>
+      <div class='date'>
+        <h5>2015-2017</h5>
+        <p>Cary, NC</p>
+      </div>
+      <div class='position'>
+        <h4>PROJECT MANAGER</h4>
+        <ul>
+          <li>Managed a team of 25 nurse practitioners located nationwide and coordinated up to 15 pharmaceutical
+            marketing events per week including recruiting top attendee targets, arranging catering, and follow up
+            procedures in accordance with pharmaceutical industry compliance standards</li>
+          <li>Increased program attendance by 90% within 6 months through creation of a comprehensive modern marketing
+            plan using email campaigns, strategic relationship building with key office managers, and social media</li>
+          <li>Completed 120% of scheduled programs while keeping within the original budget constaints</li>
+        </ul>
+      </div>
+    </div>
+
+    <div class='mcps'>
+      <div class='date'>
+        <h5>2012-2015</h5>
+        <p>Missoula, MT</p>
+      </div>
+      <div class='position'>
+        <h4>OFFICE ADMINISTRATIOR</h4>
+        <ul>
+          <li>Provide customer service via phone, email, and in-person by providing course information, registering
+            students for classes, and giving class recommendations</li>
+          <li>Created an automated student survey system using Survey Monkey which automatically emailed customized
+            surveys to students after the end of each class and generated satisfaction reports for teachers and
+            administrators</li>
+          <li>Created and proofread print and online catalogs and kept course listings and descriptions up to date on
+            school website</li>
+          <li>Maintained inventory accounting and processed purchases from school bookstore</li>
+        </ul>
+      </div>
+
+      <div class='acw'>
+        <div class='date'>
+          <h5>2009-2012</h5>
+          <p>Cary, NC</p>
+        </div>
+        <div class='position'>
+          <h4>HEAD CUSTOMER SERVICE REPRESENTATIVE</h4>
+          <ul>
+            <li>Managed a team of 7 customer service representatives and helped train new CSRs</li>
+            <li>Maintained and updated customer database with changes in customer information and order status</li>
+            <li>Completed inventory monthly and closed store nightly</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+  <!-- Education Section-->
+  <section class='education'>
+    <h2>EDUCATION</h2>
+    <div class='lambda'>
+      <div class='date'>
+        <h5>2019-Present</h5>
+      </div>
+      <div class='edu'>
+        <h4>LAMBDA SCHOOL</h4>
+      </div>
+      <div class='um'>
+        <div class='date'>
+          <h5>2012-2014</h5>
+        </div>
+        <div class='edu'>
+          <h4>UNIVERSITY OF MONTANA</h4>
+          <p>International Relations</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!--Skills Section -->
+  <section class='skills'>
+    <h2>SKILLS</h2>
+    <div class='skillbox'>
+      <i class="fab fa-html5"></i>
+      <p>HTML</p>
+    </div>
+    <div class='skillbox'>
+      <i class="fab fa-css3"></i>
+      <p>CSS</p>
+    </div>
+    <div class='skillbox'>
+      <i class="fab fa-js-square"></i>
+      <p>JavaScript</p>
+    </div>
+    <div class='skillbox'>
+      <i class="fab fa-wordpress"></i>
+      <p>WordPress</p>
+    </div>
+    <div class='skillbox'>
+      <i class="fas fa-tasks"></i>
+      <p>Project Management</p>
+    </div>
+    <div class='skillbox'>
+      <i class="fas fa-search"></i>
+      <p>SEO</p>
+    </div>
+  </section>
+
+  <!-- Contact Section -->
+  <section class='contact'>
+    <h2>CONTACT</h2>
+    <p>Cary, NC</p>
+    <p>P: +1 (919) 744-6173</p>
+    <p>E: bruner.emilym@gmail.com</p>
+    <i class="fab fa-linkedin"></i>
+    <i class="fab fa-github"></i>
+
+
+
+  </section>
+
 </body>
+
 </html>
