started styling page

--- a/index.html
+++ b/index.html
@@ -17,12 +17,9 @@
 </head>
 
 <body>
-  <header>
 
-    <div class='name'>
-      <h1>EMILY BRUNER</h1>
-      <h3>WEB DEVELOPER</h3>
-    </div>
+
+  <header>
 
     <div class="navigation">
       <nav>
@@ -32,6 +29,16 @@
         <a href='#'>Contact</a>
       </nav>
     </div>
+
+    <div class='name'>
+      <h1>EMILY BRUNER</h1>
+      <h3>WEB DEVELOPER</h3>
+      <p id='profile'>Perpetually positive tech enthusiast with over 7 years of professional experience managing
+        prjects, offices,
+        and teams. Relentless problem solver who maintains precise attention to detail while wearing multiple hats.</p>
+    </div>
+
+
 
   </header>
 
@@ -52,7 +59,8 @@
             marketing events per week including recruiting top attendee targets, arranging catering, and follow up
             procedures in accordance with pharmaceutical industry compliance standards</li>
           <li>Increased program attendance by 90% within 6 months through creation of a comprehensive modern marketing
-            plan using email campaigns, strategic relationship building with key office managers, and social media</li>
+            plan using email campaigns, strategic relationship building with key office managers, and social media
+          </li>
           <li>Completed 120% of scheduled programs while keeping within the original budget constaints</li>
         </ul>
       </div>
