--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
     <section class='experience'>
       <h2>EXPERIENCE</h2>
 
-      <div class='healthscripts'>
+      <div class='position'>
         <div class='date'>
           <h5>2015-2017</h5>
           <br>
           <p>Cary, NC</p>
         </div>
-        <div class='position'>
+        <div class='healthscripts'>
           <h4>PROJECT MANAGER</h4>
           <ul>
             <li>Managed a team of 25 nurse practitioners located nationwide and coordinated up to 15 pharmaceutical
@@ -69,12 +69,12 @@
         </div>
       </div>
 
-      <div class='mcps'>
+      <div class='position'>
         <div class='date'>
           <h5>2012-2015</h5>
           <p>Missoula, MT</p>
         </div>
-        <div class='position'>
+        <div class='mcps'>
           <h4>OFFICE ADMINISTRATIOR</h4>
           <ul>
             <li>Provide customer service via phone, email, and in-person by providing course information, registering
@@ -90,12 +90,12 @@
         </div>
       </div>
 
-      <div class='acw'>
+      <div class='position'>
         <div id='annoyingdate'>
           <h5>2009-2012</h5>
           <p>Cary, NC</p>
         </div>
-        <div class='position' id='csr'>
+        <div class='acw' id='csr'>
           <h4>HEAD CUSTOMER SERVICE REPRESENTATIVE</h4>
           <ul>
             <li>Managed a team of 7 customer service representatives and helped train new CSRs</li>
