finished more css

--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
         <a href='#'>Portfolio</a>
         <a href='#'>Contact</a>
       </nav>
+
+
     </div>
 
     <div class='name'>
@@ -44,7 +46,7 @@
 
   <!-- Work Experience Section -->
 
-  <section class='main-content'>
+  <div class='main-content'>
     <section class='experience'>
       <h2>EXPERIENCE</h2>
 
@@ -104,76 +106,81 @@
           </ul>
         </div>
       </div>
-      </div>
+
     </section>
 
+    <div class='right-content'>
 
-    <!-- Education Section-->
-    <section class='education'>
-      <h2>EDUCATION</h2>
-      <div class='lambda'>
-        <div class='date'>
-          <h5>2019-Present</h5>
+      <!--Skills Section -->
+      <section class='skills'>
+        <h2>SKILLS</h2>
+        <div class='skillbox'>
+          <i class="fab fa-html5"></i>
+
+          <p>HTML</p>
         </div>
-        <div class='edu'>
-          <h4>LAMBDA SCHOOL</h4>
+        <div class='skillbox'>
+          <i class="fab fa-css3"></i>
+
+          <p>CSS</p>
         </div>
-        <div class='um'>
+        <div class='skillbox'>
+          <i class="fab fa-js-square"></i>
+          <p>JavaScript</p>
+        </div>
+        <div class='skillbox'>
+          <i class="fab fa-wordpress"></i>
+          <p>WordPress</p>
+        </div>
+        <div class='skillbox'>
+          <i class="fas fa-tasks"></i>
+          <p>Project Management</p>
+        </div>
+        <div class='skillbox'>
+          <i class="fas fa-search"></i>
+          <p>SEO</p>
+        </div>
+      </section>
+
+      <!-- Education Section-->
+      <section class='education'>
+        <h2>EDUCATION</h2>
+        <div class='lambda'>
           <div class='date'>
-            <h5>2012-2014</h5>
+            <h5>2019-Present</h5>
           </div>
           <div class='edu'>
-            <h4>UNIVERSITY OF MONTANA</h4>
-            <p>International Relations</p>
+            <h4>LAMBDA SCHOOL</h4>
+          </div>
+          <div class='um'>
+            <div class='date'>
+              <h5>2012-2014</h5>
+            </div>
+            <div class='edu'>
+              <h4>UNIVERSITY OF MONTANA</h4>
+              <p>International Relations</p>
+            </div>
           </div>
         </div>
-      </div>
-    </section>
+      </section>
+
+
+
+
+      <!-- Contact Section -->
+      <section class='contact'>
+        <h2>CONTACT</h2>
+        <p>Cary, NC</p>
+        <p>P: +1 (919) 744-6173</p>
+        <p>E: bruner.emilym@gmail.com</p>
+        <i class="fab fa-linkedin"></i>
+        <i class="fab fa-github"></i>
+
+
+
+      </section>
     </div>
-
-    <!--Skills Section -->
-    <section class='skills'>
-      <h2>SKILLS</h2>
-      <div class='skillbox'>
-        <i class="fab fa-html5"></i>
-        <p>HTML</p>
-      </div>
-      <div class='skillbox'>
-        <i class="fab fa-css3"></i>
-        <p>CSS</p>
-      </div>
-      <div class='skillbox'>
-        <i class="fab fa-js-square"></i>
-        <p>JavaScript</p>
-      </div>
-      <div class='skillbox'>
-        <i class="fab fa-wordpress"></i>
-        <p>WordPress</p>
-      </div>
-      <div class='skillbox'>
-        <i class="fas fa-tasks"></i>
-        <p>Project Management</p>
-      </div>
-      <div class='skillbox'>
-        <i class="fas fa-search"></i>
-        <p>SEO</p>
-      </div>
-    </section>
-
-    <!-- Contact Section -->
-    <section class='contact'>
-      <h2>CONTACT</h2>
-      <p>Cary, NC</p>
-      <p>P: +1 (919) 744-6173</p>
-      <p>E: bruner.emilym@gmail.com</p>
-      <i class="fab fa-linkedin"></i>
-      <i class="fab fa-github"></i>
-
-
-
-    </section>
-
-  </section>
+  </div>
 </body>
 
 </html>
