finished project and made mobile responsive

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!doctype html>
 
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <html lang="en">
 
 <head>
   <meta charset="utf-8">
 
-  <title>My Resume</title>
+  <title>Emily Bruner Resume</title>
 
   <link rel="stylesheet" href="css/index.css">
 
@@ -25,7 +27,7 @@
       <nav>
         <a href='#'>Home</a>
         <a href='#'>About</a>
-        <a href='#'>Portfolio</a>
+        <a href='https://emilybruner.github.io/portfolio-website/'>Portfolio</a>
         <a href='#'>Contact</a>
       </nav>
 
@@ -93,7 +95,7 @@
       </div>
 
       <div class='position'>
-        <div id='annoyingdate'>
+        <div class='date' id='annoyingdate'>
           <h5>2009-2012</h5>
           <p>Cary, NC</p>
         </div>
@@ -168,13 +170,18 @@
       <!-- Contact Section -->
       <section class='contact'>
         <h2>CONTACT</h2>
-        <p>Cary, NC</p>
-        <p>P: +1 (919) 744-6173</p>
-        <p>E: bruner.emilym@gmail.com</p>
-        <i class="fab fa-linkedin"></i>
-        <i class="fab fa-github"></i>
-
-
+        <div class='contactinfo'>
+          <p>Cary, NC</p>
+          <br>
+          <p>P: +1 (919) 744-6173</p>
+          <br>
+          <p>E: bruner.emilym@gmail.com</p>
+          <br>
+          <div class='contacticons'>
+            <i class="fab fa-linkedin"></i>
+            <i class="fab fa-github"></i>
+          </div>
+        </div>
 
       </section>
     </div>
